@@ -129,6 +129,7 @@
 
 #define ERR_CHANOWNPRIVNEEDED 499
 
+#define ERR_TOOMANYJOINS     500
 #define ERR_UMODEUNKNOWNFLAG 501
 #define ERR_USERSDONTMATCH   502
 
