@@ -589,3 +589,7 @@
 - Fixed a bug with channel alias{}'s where using the format syntax caused a crash (#0002323)
   reported by Snake.
 - Made channel mode +S strip RGB color codes.
+- Added channelmode +j (jointhrottle), syntax: /mode #chan +j X:Y, and then it will
+  throttle the number of joins per-user to X in Y seconds. Idea from Angrywolf (who
+  wrote a module that did this before). This might need some more testing :).
+  It's enabled by default but can be #undef'ed in include/config.h (line 449).
